# rover_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: default.start.yaml  gazebo.launch  simulation_joy.launch  simulation_nav.launch
models/: marker1_coll.dae  terrain.dae  texture1.dae
models/markers/: .directory  generate_markers.py  marker.dae  marker1.blend  marker_coll.dae
models/names/: .directory
models/terrain/: model.sdf
providedFiles/erc2018/: Landmarks.csv  TTaskMap.m  mapEXAMPLE.tif
providedFiles/erc2018final/: AuxPoints.txt  ContourMap.tif  DTM01_v1.txt  DTM05_v1.txt  DTM05_v2.txt  INFO.txt  Landmarks.txt  Map.tif  StartArea.txt  TTaskMap.m  Waypoints.txt
resources/landmarks/: marker.blend  marker.dae  marker_coll.dae
resources/marker/: marker.blend  marker.dae
resources/names/: exp_logo.dae  name_default.blend  name_default.dae
scripts/: Scripts_README.txt  fix_landmark_heights.py  generate_collada.py  generate_gazebo_model.py  generate_heightmap.py  generate_landmarks.py  generate_mesh.py  generate_name.py  generate_names.py  generate_random_heightmap.py  generate_single_landmark.py  generate_terrain.py  generate_world.py  world_build.py  world_create.py
scripts/landmarks/: generate_landmark_texture.py  generate_landmarks.py  generate_markers.py  generate_single_landmark.py  hello.txt  insert_landmarks_to_world.py  marker.blend  marker.blend1  marker.dae  marker_coll.dae
scripts/names/: .directory  exp_logo.dae  generate_names.py  name_default.blend  name_default.blend1
worlds/: erc2018.world  marker1.dae
worlds/TestWorld/: world.world
worlds/TestWorld2/: Heightmap.csv  world.world
worlds/erc2018/: start.yaml  world.world
worlds/erc2018_landmarks/: model.sdf
worlds/erc2018final/: Heightmap.csv  Landmarks.csv  (+2 more)
(+100 files in other folders)
