<?xml version="1.0"?>
<package format="2">
  <name>rover_sim</name>
  <version>0.0.0</version>
  <description>Contains all the requirement files for the simulation of the WARR Exploration Rover.</description>

  <maintainer email="exploration@warr.de">WARR Exploration</maintainer>


  <license>GPLv3</license>

  <url type="website">http://exploration.warr.de</url>

  <author email="markus.goegele@warr.de">Markus Gögele</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf_tutorial</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <exec_depend>rover_config</exec_depend>
  <exec_depend>rover_control</exec_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>

</package>
